// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Table.Tr allowTags=["UU5.Example.MyCompButton"] 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr checkGrammar=false 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr checkGrammar=true 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr checkHighlight=false 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr checkHighlight=true 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr checkSpaces=false 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr checkSpaces=true 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr className="my-classname" 1`] = `
<tr
  className="uu5-bricks-table-tr my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr className="test-classname" 1`] = `
<tr
  className="uu5-bricks-table-tr test-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema="brown" 1`] = `
<tr
  className="color-schema-brown uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema="brown-rich" 1`] = `
<tr
  className="color-schema-brown-rich uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema="cyan" 1`] = `
<tr
  className="color-schema-cyan uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema="cyan-rich" 1`] = `
<tr
  className="color-schema-cyan-rich uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema="default" 1`] = `
<tr
  className="color-schema-default uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema="green" 1`] = `
<tr
  className="color-schema-green uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema="green-rich" 1`] = `
<tr
  className="color-schema-green-rich uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema="grey" 1`] = `
<tr
  className="color-schema-grey uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema="grey-rich" 1`] = `
<tr
  className="color-schema-grey-rich uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema="orange" 1`] = `
<tr
  className="color-schema-orange uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema="orange-rich" 1`] = `
<tr
  className="color-schema-orange-rich uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema="pink" 1`] = `
<tr
  className="color-schema-pink uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema="pink-rich" 1`] = `
<tr
  className="color-schema-pink-rich uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema="purple" 1`] = `
<tr
  className="color-schema-purple uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema="purple-rich" 1`] = `
<tr
  className="color-schema-purple-rich uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema="red" 1`] = `
<tr
  className="color-schema-red uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema="red-rich" 1`] = `
<tr
  className="color-schema-red-rich uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema="yellow" 1`] = `
<tr
  className="color-schema-yellow uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr colorSchema="yellow-rich" 1`] = `
<tr
  className="color-schema-yellow-rich uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr content="This is Content from ContentMixin" 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr content=12345 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr controlled=false 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr controlled=true 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr default props 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr disabled=false 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr disabled=false 3`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr disabled=true 1`] = `
<tr
  className="uu5-bricks-table-tr uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</tr>
`;

exports[`UU5.Bricks.Table.Tr disabled=true 3`] = `
<tr
  className="uu5-bricks-table-tr uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</tr>
`;

exports[`UU5.Bricks.Table.Tr dynamic=false 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr dynamic=true 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr fullTextSearchPriority=0 1`] = `
<tr
  className="uu5-bricks-table-tr uu-fulltextsearch-0"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr hidden=false 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr hidden=false 3`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr hidden=true 1`] = `
<tr
  className="uu5-bricks-table-tr uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr hidden=true 3`] = `
<tr
  className="uu5-bricks-table-tr uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr id="myId" 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr id="test-id" 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="test-id"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr ignoreHTML=false 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr ignoreHTML=true 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr mainAttrs=undefined 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr name="myName" 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr nestingLevel="bigBox" 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr nestingLevel="bigBoxCollection" 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr nestingLevel="box" 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr nestingLevel="box" 3`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr nestingLevel="boxCollection" 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr nestingLevel="container" 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr nestingLevel="inline" 1`] = `""`;

exports[`UU5.Bricks.Table.Tr nestingLevel="inline" 3`] = `""`;

exports[`UU5.Bricks.Table.Tr nestingLevel="page" 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr nestingLevel="smallBox" 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr nestingLevel="smallBoxCollection" 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr nestingLevel="spa" 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr noIndex=false 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr noIndex=true 1`] = `
<tr
  className="uu5-bricks-table-tr uu5-noindex uu-fulltextsearch-0"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr noPrint=false 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr noPrint=true 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr props.allowTags example 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID1"
  style={Object {}}
  title={null}
>
  <Header
    content="Table"
    id="uuID1-header"
    key="uuID1-header"
    underline={false}
  />
  <table
    className="uu5-bricks-table-table"
  >
    <table-thead
      allowTags={
        Array [
          "UU5.Example.MyCompButton",
        ]
      }
      colorSchema="danger"
      id="uesID1"
      key="uesID1"
    >
      <table-tr
        id="uesID2"
      >
        <table-th
          content="Name"
          id="uesID3"
        />
        <table-th
          content="Rank"
          id="uesID4"
        />
        <UU5.Example.MyCompButton
          content="AllowTags Content"
          id="uesID5"
        />
      </table-tr>
    </table-thead>
    <table-tbody
      colorSchema="blue"
      id="uuID2"
      key="uuID2"
    >
      <table-tr
        id="uuID3"
      >
        <table-td
          content="Rimmer"
          id="uuID4"
        />
        <table-td
          content="2nd class technician"
          id="uuID5"
        />
        <table-td
          content="comical"
          id="uuID6"
        />
      </table-tr>
    </table-tbody>
    <table-tfoot
      colorSchema="danger"
      id="uuID7"
      key="uuID7"
    >
      <table-tr
        id="uuID8"
      >
        <table-th
          content="Best rank"
          id="uuID9"
        />
        <table-td
          content="1st console officer"
          id="uuID10"
        />
      </table-tr>
    </table-tfoot>
  </table>
  <Footer
    content="Table footer"
    id="uuID1-footer"
    key="uuID1-footer"
  />
</div>
`;

exports[`UU5.Bricks.Table.Tr pureRender=false 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr pureRender=true 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr selected=false 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr selected=true 1`] = `
<tr
  className="uu5-bricks-table-tr uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr style="padding:8px; borderRadius: 2px" 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr style={"backgroundColor":"red","color":"blue"} 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr style={"margin":8} 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={
    Object {
      "margin": 8,
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr textCorrector=false 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr textCorrector=true 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Tr tooltip="My Tooltip" 1`] = `
<tr
  className="uu5-bricks-table-tr"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
